--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button class="menu-btn" onclick="hideInstructions()" style="margin-top: 15px;">Back to Menu</button>
             </div>
         </div>
-        
+</div>
         <div class="game-over" id="gameOver">
             <h2>GAME OVER!</h2>
             <p>Final Score: <span id="finalScore">0</span></p>
